--- a/.github/workflows/build_release_assets.yml
+++ b/.github/workflows/build_release_assets.yml
@@ -30,7 +30,7 @@ jobs:
             dist
 
   build_os_packages:
-    name: Build signed, standalone binaries
+    name: Build packages
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
@@ -96,18 +96,30 @@ jobs:
           # Make it available
           cp rcodesign /usr/local/bin
 
-      - name: Install normal dependencies
+      - name: Install dependencies
+        shell: bash
         run: |
           python -m pip install --upgrade pip
-          python -m pip install --upgrade pipenv==2023.10.3
+          python -m pip install --upgrade \
+            pipenv==2023.10.3 \
+            pyinstaller==6.5.0
           pipenv install --system --dev
         env:
           # Disable lock otherwise Windows-only dependencies like colorama are not installed
           PIPENV_SKIP_LOCK: 1
 
-      - name: Install standalone-specific dependencies
+      - name: Install Linux specific dependencies
+        if: matrix.os == 'ubuntu-22.04'
         run: |
-          python -m pip install pyinstaller==6.5.0
+          NFPM_VERSION=2.36.1
+          NFPM_CHECKSUM=05c17a1e09c470807b149fdd7bcd8f600eea044f459fc3ce81aa230103c0baf5
+
+          scripts/download \
+            https://github.com/goreleaser/nfpm/releases/download/v${NFPM_VERSION}/nfpm_${NFPM_VERSION}_amd64.deb \
+            nfpm.deb \
+            $NFPM_CHECKSUM
+
+          sudo dpkg -i nfpm.deb
 
       - name: Prepare macOS secrets
         if: startsWith(matrix.os, 'macos-')
@@ -164,3 +176,5 @@ jobs:
             packages/ggshield-*.gz
             packages/ggshield-*.pkg
             packages/ggshield-*.zip
+            packages/ggshield-*.rpm
+            packages/ggshield_*.deb
