--- a/scripts/build-os-packages/nfpm.yaml
+++ b/scripts/build-os-packages/nfpm.yaml
@@ -1,10 +1,14 @@
 name: ggshield
-section: default
+section: utils
 vendor: GitGuardian
 maintainer: GitGuardian <dev@gitguardian.com>
 license: MIT
 homepage: https://github.com/GitGuardian/ggshield
-description: 'CLI application that runs in your local environment or in a CI environment to help you detect leaked secrets, as well as other potential security vulnerabilities or policy breaks.'
+description: |-
+  Detect leaked secrets and other potential security vulnerabilities
+  ggshield runs in your local environment or in a CI environment to help you
+  detect leaked secrets, as well as other potential security vulnerabilities or
+  policy breaks.
 
 arch: amd64
 platform: linux
@@ -15,8 +19,11 @@ release: 1
 depends:
   - git
 
+# Make sure files are not group-writable. lintian does not like that.
+umask: 0o022
+
 contents:
-  - src: /usr/libexec/ggshield/ggshield
+  - src: ../libexec/ggshield/ggshield
     dst: /usr/bin/ggshield
     type: symlink
 
@@ -29,3 +36,9 @@ contents:
 
   - src: LICENSE
     dst: /usr/share/doc/ggshield/LICENSE
+
+overrides:
+  deb:
+    depends:
+      - libc6
+      - git
