--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -154,88 +154,8 @@ jobs:
           TEST_KNOWN_SECRET: ${{ secrets.TEST_KNOWN_SECRET }}
 
   build_os_packages:
-    name: Build packages
-    runs-on: ${{ matrix.os }}
-    strategy:
-      fail-fast: false
-      matrix:
-        os:
-          - ubuntu-22.04
-          - windows-2022
-          - macos-13 # x86-64
-          - macos-14 # arm
-    steps:
-      - uses: actions/checkout@v4
-        with:
-          # Get enough commits to run `ggshield secret scan commit-range` on ourselves
-          fetch-depth: 10
-
-      - name: Set up Python 3.10
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.10'
-
-      - name: Install dependencies
-        shell: bash
-        run: |
-          python -m pip install --upgrade pip
-          python -m pip install --upgrade \
-            pipenv==2023.10.3 \
-            pyinstaller==6.5.0
-          pipenv install --system --dev
-        env:
-          # Disable lock otherwise Windows-only dependencies like colorama are not installed
-          PIPENV_SKIP_LOCK: 1
-
-      - name: Install Linux specific dependencies
-        if: matrix.os == 'ubuntu-22.04'
-        run: |
-          NFPM_VERSION=2.36.1
-          NFPM_CHECKSUM=05c17a1e09c470807b149fdd7bcd8f600eea044f459fc3ce81aa230103c0baf5
-
-          scripts/download \
-            https://github.com/goreleaser/nfpm/releases/download/v${NFPM_VERSION}/nfpm_${NFPM_VERSION}_amd64.deb \
-            nfpm.deb \
-            $NFPM_CHECKSUM
-
-          sudo dpkg -i nfpm.deb
-
-      - name: Build
-        shell: bash
-        run: |
-          # Use --git-version to produce a package with a version number
-          # different from a release
-          scripts/build-os-packages/build-os-packages --git-version
-
-      - name: Override base Docker image used for functional tests on Windows
-        if: matrix.os == 'windows-2022'
-        # This is required because GitHub Windows runner is not configured to
-        # run Linux-based Docker images
-        shell: bash
-        run: |
-          echo "GGTEST_DOCKER_IMAGE=mcr.microsoft.com/windows/nanoserver:ltsc2022" >> $GITHUB_ENV
-
-      - name: Functional tests
-        shell: bash
-        # See note about steps requiring the GITGUARDIAN_API at the top of this file
-        if: ${{ !github.event.pull_request.head.repo.fork }}
-        run: |
-          scripts/build-os-packages/build-os-packages functests
-        env:
-          GITGUARDIAN_API_KEY: ${{ secrets.GITGUARDIAN_API_KEY }}
-          GITGUARDIAN_API_URL: ${{ secrets.GITGUARDIAN_API_URL }}
-          TEST_KNOWN_SECRET: ${{ secrets.TEST_KNOWN_SECRET }}
-
-      - name: Upload artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: os-packages-${{ matrix.os }}
-          path: |
-            packages/ggshield-*.gz
-            packages/ggshield-*.pkg
-            packages/ggshield-*.zip
-            packages/ggshield-*.rpm
-            packages/ggshield_*.deb
+    uses: ./.github/workflows/build_release_assets.yml
+    secrets: inherit
 
   test_github_secret_scan_action:
     name: Test GitHub action for `secret scan`
