feat(fix): WIP Implement automatic remediation

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,9 @@
 GITGUARDIAN_API_KEY=__________FILL ME__________
 GITGUARDIAN_INSTANCE=https://dashboard.gitguardian.com/
 
+# for automatic remedation
+OPENAI_API_KEY=
+
 # Used by functional tests for the --ignore-known-secrets feature
 # Set this to a single-match secret known by your dashboard
 #TEST_KNOWN_SECRET=
