--- a/scripts/update-pipfile-lock/Dockerfile
+++ b/scripts/update-pipfile-lock/Dockerfile
@@ -13,9 +13,12 @@ RUN apt-get update \
     && apt-get install -y --no-install-recommends git \
     && rm -rf /var/lib/apt/lists/*
 
-RUN pip install pipenv==2023.10.3
+RUN pip install pipenv==2023.12.1
 RUN useradd --uid $UID --create-home user
 
 WORKDIR /home/user/src
+
+# Make sure we don't use the .venv from the host if it exists
+ENV PIPENV_VENV_IN_PROJECT=False
 
 CMD ["pipenv", "lock"]
