ci: add Windows .zip file to release assets

--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -79,6 +79,7 @@ jobs:
             packages/ggshield-*.pkg \
             packages/ggshield_*.deb \
             packages/ggshield-*.rpm \
+            packages/ggshield-*.zip \
             packages/ggshield-*.gz
 
   push_to_docker_hub:
