chore: enable more pyright checks
Enable reportIncompatibleMethodOverride and reportUnknownParameterType
checks. Fix code so pyright passes.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,7 +29,9 @@ omit = [".venv/*"]
 
 [tool.pyright]
 include = ["ggshield"]
+reportIncompatibleMethodOverride = true
 reportMissingParameterType = true
+reportUnknownParameterType = true
 reportUnnecessaryTypeIgnoreComment = true
 
 [tool.scriv]
