--- a/actions/sca/action.yml
+++ b/actions/sca/action.yml
@@ -7,7 +7,7 @@ inputs:
     description: |
       Arguments to pass to `ggshield sca scan ci`.
 
-      [`ggshield iac sca ci` reference](https://docs.gitguardian.com/ggshield-docs/reference/sca/scan/ci).
+      [`ggshield sca scan ci` reference](https://docs.gitguardian.com/ggshield-docs/reference/sca/scan/ci).
     required: false
 branding:
   icon: 'shield'
