--- a/setup.cfg
+++ b/setup.cfg
@@ -43,7 +43,8 @@ install_requires =
     marshmallow>=3.18.0,<3.19.0
     marshmallow-dataclass>=8.5.8,<8.6.0
     oauthlib>=3.2.1,<3.3.0
-    pygitguardian>=1.15.2,<1.16.0
+    # TODO: replace this with a real version number as soon as a new version of py-gitguardian is out
+    pygitguardian @ git+https://github.com/GitGuardian/py-gitguardian.git@fc766e198576d5f73a4cf38a98b28b99354a4817
     pyjwt>=2.6.0,<2.7.0
     python-dotenv>=0.21.0,<0.22.0
     pyyaml>=6.0.1,<6.1
