--- a/actions-unstable/sca/action.yml
+++ b/actions-unstable/sca/action.yml
@@ -11,7 +11,7 @@ inputs:
                                         are found. The env var GITGUARDIAN_EXIT_ZERO can also be used
                                         to set this option.
         --minimum-severity              [LOW|MEDIUM|HIGH|CRITICAL|MALICIOUS]
-                                        Minimum severity of the policies
+                                        Minimum severity of the vulnerabilities.
         --ignore-path, --ipa PATH       Do not scan the specified paths.
     required: false
 branding:
