chore(ci): lock pyfakefs <5.6.0

--- a/Pipfile
+++ b/Pipfile
@@ -30,6 +30,6 @@ vcrpy = ">=5.1.0"
 # support Python 3.8 anymore.
 voluptuous = "<0.15.0"
 
-pyfakefs = ">=5.2.0"
+pyfakefs = ">=5.2.0, < 5.6.0" # Pin because 5.6.0 currently (2024-07-15) does not work on Windows
 scriv = { version = "*", extras = ["toml"] }
 pyright = "==1.1.367"
