doc: improve explanation for custom testing secret
Co-authored-by: Aurelien Gateau <aurelien.gateau@gitguardian.com>

--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,7 @@ GITGUARDIAN_INSTANCE=https://dashboard.gitguardian.com/
 # it unless the default value does not work for you
 #TEST_UNKNOWN_SECRET=
 # Set this to a single match secret unknown by your dashboard with a valid status
-# This is required to run functional test on an instance with a ggshield repo integrated
+# This is required to run functional tests on an account monitoring ggshield repository,
+# where the token in conftest.py has been ignored
 TEST_GG_VALID_TOKEN=
 TEST_GG_VALID_TOKEN_IGNORE_SHA=
