--- a/.github/workflows/build_release_assets.yml
+++ b/.github/workflows/build_release_assets.yml
@@ -26,11 +26,11 @@ jobs:
 
       - name: Install packaging tools
         run: |
-          pip install build
+          pip install --upgrade pdm
 
       - name: Create packages
         run: |
-          python -m build
+          pdm build
 
       - name: Upload packages
         uses: actions/upload-artifact@v4
@@ -141,14 +141,8 @@ jobs:
         shell: bash
         run: |
           $PYTHON_CMD -m pip install --upgrade pip
-          $PYTHON_CMD -m pip install --upgrade \
-            pipenv==2023.12.1
-
-          pipenv install --dev
-          pipenv run pip install pyinstaller==6.7.0
-        env:
-          # Disable lock otherwise Windows-only dependencies like colorama are not installed
-          PIPENV_SKIP_LOCK: 1
+          $PYTHON_CMD -m pip install --upgrade pdm
+          pdm sync --group tests --group standalone
 
       - name: Prepare macOS secrets
         if: startsWith(matrix.os, 'macos-') && inputs.release_mode
@@ -218,9 +212,9 @@ jobs:
           else
             args="--suffix +${GITHUB_SHA:0:7}"
           fi
-          # Run the script with `bash -c` because `pipenv run` does not
+          # Run the script with `bash -c` because `pdm run` does not
           # automatically do it on Windows
-          pipenv run bash -c "scripts/build-os-packages/build-os-packages $args"
+          pdm run bash -c "scripts/build-os-packages/build-os-packages $args"
 
       - name: Override base Docker image used for functional tests on Windows
         if: matrix.os == 'windows-2022'
@@ -235,7 +229,7 @@ jobs:
         # See note about steps requiring the GITGUARDIAN_API at the top of this file
         if: ${{ !github.event.pull_request.head.repo.fork }}
         run: |
-          pipenv run bash -c "scripts/build-os-packages/build-os-packages functests"
+          pdm run bash -c "scripts/build-os-packages/build-os-packages functests"
         env:
           GITGUARDIAN_API_KEY: ${{ secrets.GITGUARDIAN_API_KEY }}
           GITGUARDIAN_API_URL: ${{ secrets.GITGUARDIAN_API_URL }}
