--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,8 +34,8 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          python -m pip install pipenv==2023.12.1 pre-commit
-          pipenv install --dev --skip-lock
+          python -m pip install --upgrade pdm pre-commit
+          pdm sync
 
       - uses: actions/cache@v3
         with:
@@ -72,10 +72,6 @@ jobs:
   build:
     name: Build and Test
     runs-on: ${{ matrix.os }}
-    env:
-      # We skip pipenv lockfile by default, because a Pipfile.lock should only
-      # be used for the Python version it was generated for.
-      PIPENV_SKIP_LOCK: 1
     strategy:
       fail-fast: false
       matrix:
@@ -92,22 +88,11 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
 
-      - name: Use Pipfile.lock on locked version of Python
-        # Keep version in sync with scripts/update-pipfile-lock/Dockerfile
-        if: matrix.python-version == '3.10'
-        run: |
-          echo "PIPENV_SKIP_LOCK=0" >> $GITHUB_ENV
-
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          python -m pip install --upgrade pipenv==2023.12.1
-          pipenv install --system --dev
-      - name: Install Windows dev dependencies
-        if: matrix.os == 'windows-2022'
-        run: |
-          # Those are win32-only dependencies from pytest
-          python -m pip install atomicwrites colorama
+          python -m pip install --upgrade pdm
+          pdm sync --global --project . --group dev --group tests
 
       - name: Override base Docker image used for functional tests on Windows
         if: matrix.os == 'windows-2022'
@@ -119,19 +104,19 @@ jobs:
 
       - name: Ensure a clean package installation
         run: |
-          pip install build wheel check-wheel-contents
-          python -m build --wheel
+          python -m pip install --upgrade check-wheel-contents
+          pdm build --no-sdist
           # The created wheel (.whl) file will be found and analyzed within the `dist/` folder
           check-wheel-contents dist/
 
       - name: Run unit tests
         run: |
-          coverage run --source ggshield -m pytest --disable-pytest-warnings --disable-socket tests/unit
+          pdm run coverage run --source ggshield -m pytest --disable-pytest-warnings --disable-socket tests/unit
 
       - name: Gather coverage report
         run: |
-          coverage report --fail-under=80
-          coverage xml
+          pdm run coverage report --fail-under=80
+          pdm run coverage xml
 
       - uses: codecov/codecov-action@v4
         with:
