--- a/setup.cfg
+++ b/setup.cfg
@@ -43,8 +43,7 @@ install_requires =
     marshmallow>=3.18.0,<3.19.0
     marshmallow-dataclass>=8.5.8,<8.6.0
     oauthlib>=3.2.1,<3.3.0
-    # TODO: replace when the next pygitguardian release is out
-    pygitguardian @ git+https://github.com/GitGuardian/py-gitguardian.git@dce0ec3326a52724822d0f1468d2039bd04d562b
+    pygitguardian>=1.17.0,<1.18.0
     pyjwt>=2.6.0,<2.7.0
     python-dotenv>=0.21.0,<0.22.0
     pyyaml>=6.0.1,<6.1
