--- a/.github/workflows/build_release_assets.yml
+++ b/.github/workflows/build_release_assets.yml
@@ -111,9 +111,10 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           python -m pip install --upgrade \
-            pipenv==2023.12.1 \
-            pyinstaller==6.7.0
-          pipenv install --system --dev
+            pipenv==2023.12.1
+
+          pipenv install --dev
+          pipenv run pip install pyinstaller==6.7.0
         env:
           # Disable lock otherwise Windows-only dependencies like colorama are not installed
           PIPENV_SKIP_LOCK: 1
@@ -199,7 +200,9 @@ jobs:
           else
             args="--git-version"
           fi
-          scripts/build-os-packages/build-os-packages $args
+          # Run the script with `bash -c` because `pipenv run` does not
+          # automatically do it on Windows
+          pipenv run bash -c "scripts/build-os-packages/build-os-packages $args"
 
       - name: Override base Docker image used for functional tests on Windows
         if: matrix.os == 'windows-2022'
@@ -214,7 +217,7 @@ jobs:
         # See note about steps requiring the GITGUARDIAN_API at the top of this file
         if: ${{ !github.event.pull_request.head.repo.fork }}
         run: |
-          scripts/build-os-packages/build-os-packages functests
+          pipenv run bash -c "scripts/build-os-packages/build-os-packages functests"
         env:
           GITGUARDIAN_API_KEY: ${{ secrets.GITGUARDIAN_API_KEY }}
           GITGUARDIAN_API_URL: ${{ secrets.GITGUARDIAN_API_URL }}
