--- a/setup.cfg
+++ b/setup.cfg
@@ -43,7 +43,8 @@ install_requires =
     marshmallow>=3.18.0,<3.19.0
     marshmallow-dataclass>=8.5.8,<8.6.0
     oauthlib>=3.2.1,<3.3.0
-    pygitguardian>=1.17.0,<1.18.0
+    # pygitguardian>=1.17.0,<1.18.0
+    pygitguardian @ git+https://github.com/GitGuardian/py-gitguardian.git@d15a3daa9669691fa0e1b9c29a6d11b55d203206
     pyjwt>=2.6.0,<2.7.0
     python-dotenv>=0.21.0,<0.22.0
     pyyaml>=6.0.1,<6.1
