chore(docs): remove mention of policy breaks

--- a/actions/secret/action.yml
+++ b/actions/secret/action.yml
@@ -1,5 +1,5 @@
 name: 'ggshield scan'
-description: 'Scan commits for hardcoded secrets and security policy breaks.'
+description: 'Scan commits for hardcoded secrets.'
 author: GitGuardian <support@gitguardian.com>
 
 branding:
