--- a/.pre-commit-hooks.yaml
+++ b/.pre-commit-hooks.yaml
@@ -2,7 +2,7 @@
 - id: ggshield
   name: ggshield (pre-commit)
   entry: ggshield
-  description: Runs ggshield to detect hardcoded secrets, security vulnerabilities and policy breaks.
+  description: Runs ggshield to detect hardcoded secrets.
   stages: [commit]
   args: ['secret', 'scan', 'pre-commit']
   language: python
@@ -11,7 +11,7 @@
 - id: ggshield-iac
   name: ggshield-iac (pre-commit)
   entry: ggshield
-  description: Runs ggshield Infra as Code Security to detect IaC vulnerabilities and policy breaks.
+  description: Runs ggshield Infra as Code Security to detect IaC vulnerabilities.
   stages: [commit]
   args: ['iac', 'scan', 'pre-commit']
   language: python
@@ -30,13 +30,13 @@
   name: ggshield (pre-commit,docker)
   language: docker_image
   entry: -e GITGUARDIAN_API_KEY gitguardian/ggshield:latest ggshield secret scan pre-commit
-  description: Runs ggshield to detect hardcoded secrets, security vulnerabilities and policy breaks in docker images.
+  description: Runs ggshield to detect hardcoded secrets in docker images.
   pass_filenames: false
 
 - id: ggshield-push
   name: ggshield (pre-push)
   entry: ggshield
-  description: Runs ggshield to detect hardcoded secrets, security vulnerabilities and policy breaks.
+  description: Runs ggshield to detect hardcoded secrets.
   args: ['secret', 'scan', 'pre-push']
   stages: [push]
   language: python
@@ -45,7 +45,7 @@
 - id: ggshield-iac-push
   name: ggshield-iac (pre-push)
   entry: ggshield
-  description: Runs ggshield Infra as Code Security to detect IaC vulnerabilities and policy breaks.
+  description: Runs ggshield Infra as Code Security to detect IaC vulnerabilities.
   args: ['iac', 'scan', 'pre-push']
   stages: [push]
   language: python
@@ -64,5 +64,5 @@
   name: ggshield (pre-push,docker)
   language: docker_image
   entry: -e GITGUARDIAN_API_KEY gitguardian/ggshield:latest ggshield secret scan pre-push
-  description: Runs ggshield to detect hardcoded secrets, security vulnerabilities and policy breaks in docker images.
+  description: Runs ggshield to detect hardcoded secrets in docker images.
   pass_filenames: false
