chore(docs): remove another mention

--- a/actions-unstable/secret/action.yml
+++ b/actions-unstable/secret/action.yml
@@ -1,5 +1,5 @@
 name: 'ggshield scan'
-description: 'Scan commits for hardcoded secrets and security policy breaks.'
+description: 'Scan commits for hardcoded secrets.'
 author: GitGuardian <support@gitguardian.com>
 
 branding:
@@ -10,7 +10,7 @@ inputs:
   args:
     description: |
       Arguments to be passed to ggshield secret scan
-      Options:        
+      Options:
         --json                        Output results in JSON format  [default: False]
         --show-secrets                Show secrets in plaintext instead of hiding them.
         --all-policies                Present fails of all policies (Filenames, FileExtensions,
