fix(actions): name of the actions to better reflect the underlying command

--- a/actions/secret/action.yml
+++ b/actions/secret/action.yml
@@ -1,4 +1,4 @@
-name: 'ggshield scan'
+name: 'ggshield secret scan'
 description: 'Scan commits for hardcoded secrets.'
 author: GitGuardian <support@gitguardian.com>
 
